--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -46,4 +46,22 @@ spec:
       volumes:
       - name: mysql
         persistentVolumeClaim:
-          claimName: mysql      
+          claimName: mysql 
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+  namespace: expense
+spec:
+  clusterIP: None # this is called headless service
+  selector:
+    component: mysql
+    project: expense
+    tier: db 
+  ports:
+  - protocol: TCP
+    port: 3306 #service-port
+    targetPort: 3306 #target-port
